webcompat/static/css/development/components/issue-item.css
/*------Issue item------*/


/* Parent class */
.IssueItem {
  width:100%;
  font-size:var(--base-font-size);
  background-color: #fff;
  padding: 0.5em 1em;
  margin-bottom: 1em;;
}
.IssueItem--untriaged {
  border-left: 5px solid var(--wc-state-untriaged);
}
.IssueItem--needs-diagnosis {
  border-left: 5px solid var(--wc-state-need);
}
.IssueItem--contactready {
  border-left: 5px solid var(--wc-state-ready);
}
.IssueItem--sitewait {
  border-left: 5px solid var(--wc-state-sitewait);
}
.IssueItem--closed {
  border-left: 5px solid var(--wc-state-close);
}
.IssueItem--large {
  font-size:1.2em;
  border-width:8px;
}
.IssueItem-content {}
.IssueItem-header {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom:0.5em;
}
.IssueItem-metadata {
  font-size:.8em;
  margin-right:.8em;
}
  @media (--viewport-450px) {
    .IssueItem-metadata {
      display:block;
    }
  }
.IssueItem-count {
  font-weight: 400;
}
.IssueItem-label {
  display:block;
  text-align:right;
  font-size:.8em;
}
.IssueItem-section {
  display:table-cell;
  vertical-align:middle;
}
  @media (--viewport-950px) {
    .IssueItem-section {
      display:block;
    }
    .IssueItem-section + .IssueItem-section {
      margin-top:1em;
    }
    .IssueItem-label {
      text-align:center;
    }
  }

